--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </button>
       <div class="collapse" id="hintTwo">
         <div class="card card-body">
-          Look at the variable names shown on screen. Can you change <code>isAdmin</code> from <code>false</code> to <code>1</code>?
+          Look at the variable names shown on screen. Can you change <code>isAdmin</code> from <code>false</code> to <code>true</code>?
         </div>
       </div>
     </div>
