--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
         </div>
       </div>
     </div>
+
+    <div class="text-center mt-5">
+      <a href="https://github.com/hirusha-adi/uni-deakin-duca-26-t1-ctf-xss/blob/main/README.md" target="_blank" rel="noopener noreferrer">
+        View solution
+      </a>
+    </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
